<resources>
    <string name="app_name">Smart DrugBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nick_name">Nick Name</string>
    <string name="contact_name">Jack</string>
    <string name="doctor_name">Matthew</string>

    <string name="button_add_drug">添加药物</string>
    <string name="button_add_appointment">添加看病预约</string>
    <string name="button_add_note">添加日记</string>
    <string name="button_add_mf">添加联系人</string>

    <string name="menu_calendar">服药日程</string>
    <string name="menu_report">报告</string>
    <string name="menu_appointment">看病预约</string>
    <string name="menu_note">日记</string>
    <string name="menu_doctor">医生</string>
    <string name="menu_contact">联系人</string>
    <string name="menu_tip">提示</string>
    <string name="menu_settings">设置</string>
    <string name="menu_help">帮助与反馈</string>

    <string name="text_date">9月22日   周四</string>
    <string name="text_week">10月16日 - 10月22日</string>
    <string name="text_cell_date">2016年10月18日   周二</string>
    <string name="text_cell_time">8:00 AM</string>

    <string name="text_switch">周视图</string>

    <string name="title_activity_report">报告</string>
    <string name="title_activity_appointment">看病预约</string>
    <string name="title_activity_note">日记</string>
    <string name="title_activity_doctor">医生</string>
    <string name="title_activity_contact">联系人</string>
    <string name="title_activity_tip">提示</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_help">帮助与反馈</string>
    <string name="title_activity_cell_detail">药格详情</string>
    <string name="title_activity_drug_setting">药物设置</string>
    <string name="title_activity_cell_setting">药格设置</string>
    <string name="title_activity_appointment_detail">看牙</string>
    <string name="title_activity_appointment_setting">看病预约设置</string>
    <string name="title_activity_note_detail">日记详情</string>
    <string name="title_activity_note_setting">日记设置</string>
    <string name="title_activity_doctor_setting">医生设置</string>
    <string name="title_activity_doctor_detail">医生详情</string>
    <string name="title_activity_doctor_detail_tab_detail">详情</string>
    <string name="title_activity_doctor_detail_tab_drug">药物</string>
    <string name="title_activity_doctor_detail_tab_appointment">预约</string>
    <string name="title_activity_contact_setting">联系人设置</string>
    <string name="title_activity_contact_detail">联系人详情</string>

    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_finish">完成</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
