<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/menu_appointment" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_note"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/ic_menu_doctor"
            android:title="@string/menu_doctor" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_tip"
            android:icon="@drawable/ic_menu_tip"
            android:title="@string/menu_tip" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>

</menu>
