<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.wor.smartdrugbox.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.novaapps.floatingactionmenu.FloatingActionMenu
            android:id="@+id/fab_menu_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <!--First button as menu button-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_white_24dp"
                app:fabSize="normal"
                app:backgroundTint="@color/colorPrimary"
                android:clickable="false" />

            <!-- Other button as menu items-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_appointment_white"
                android:contentDescription="@string/button_add_appointment"
                app:fabSize="mini"
                app:backgroundTint="@color/colorMenuButtonOcher" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_note_white"
                android:contentDescription="@string/button_add_note"
                app:fabSize="mini"
                app:backgroundTint="@color/colorMenuButtonBlue"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_mf_white"
                android:contentDescription="@string/button_add_mf"
                app:fabSize="mini"
                app:backgroundTint="@color/colorMenuButtonGreen"/>

        </com.novaapps.floatingactionmenu.FloatingActionMenu>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
